  * checks/files.{pm,desc}:
    + [CL] Warn maintainers about packages that ship pkg-config files under
      /usr/lib/pkgconfig as they are unavailable under cross-compilation.
      Thanks to Helmut Grohne for the idea.  (Closes: #885096)
    + [CL] Warn about packages that ship non-reproducible Python .doctree
      files.  (Closes: #885327)
  * checks/init.d.{pm,desc}:
    + [CL] Don't emit init.d-script-needs-depends-on-lsb-base if the
      package ships a Systemd service file.  (Closes: #864999)
  * checks/obsolete-sites.pm:
    + [CL] Ignore commented-out lines to avoid false-positives where the
      maintainer references the old location.  (Closes: #806237)
  * checks/pe.{pm,desc}:
    + [CL] Check for Microsoft Windows Portable Executable (PE) files that
      are missing security hardening features. Thanks to Petter
      Reinholdtsen for the report.  (Closes: #837548)
  * checks/python.{pm,desc}:
    + [CL] Warn about Python 2.x packages using ${python3:Depends} and
      Python 3.x packages using ${python:Depends}. Thanks to Mattia
      Rizzolo for the idea.  (Closes: #884676)
    + [CL] Factor out definition of dependency fields.
    + [CL] Warn about Python 3 packages that depend on Python 2 packages
      and vice versa.  (Closes: #782277)
  * checks/rules.{desc,pm}:
    + [CL] Check for override_dh_clean targets that are missing calls to
      dh_clean. Thanks to Andreas Beckmann for the idea.  (Closes: #884817)
  * checks/standards-version.pm:
    + [CL] Avoid misleading tag descriptions when emitting valid
      timewarp-standards-version warnings if the date parts are identical
      (ie. "2017-11-30 < 2017-11-30"). Thanks to Andrea Bolognani
      eof@kiyuko.org> for the report.  (Closes: #884785)
  * checks/source-copyright.{desc,pm}:
    + [CL] Check for Apache 2.0 packages that do not distribute their
      accompanying "NOTICE" files.  (Closes: #885042)
    + [CL] Use the list of files in the orig tarball (rather than in the