@@ -1,0 +1,6 @@
+# Simple checks against (entire) filenames
+# Format: tag ~~ $fname regexp
+file-name-contains-wildcard-character   ~~ [*?]
+package-contains-compiled-glib-schema   ~~ (^|/)gschemas\.compiled$
+package-contains-python-coverage-file   ~~ (^|/)\.coverage$
+package-contains-python-doctree-file    ~~ \.doctree$
